- Basic gradle configuration - Added ConfigureTranslationAction - Added ConfigureTranslationDialog - Added LocalizationService - Updated plugin.xml

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,23 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.avewe.phpstormtranslationplugin</id>
-    <name>phpstorm-translation-plugin</name>
+    <name>PhpStorm Localization</name>
     <vendor>av-ewe</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
     <resource-bundle>messages.MyBundle</resource-bundle>
 
-    <extensions defaultExtensionNs="com.intellij">
+    <extensions defaultExtensionNs="com.intellij"> <!--com.avenit.phpstormtranslationplugin-->
         <toolWindow factoryClass="com.github.avewe.phpstormtranslationplugin.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
     </extensions>
-
     <applicationListeners>
         <listener class="com.github.avewe.phpstormtranslationplugin.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
     </applicationListeners>
+    <actions>
+        <action id="ConfigureTranslationAction" class="ConfigureTranslationAction" text="Configure Traslation">
+            <keyboard-shortcut keymap="$default" first-keystroke="ctrl COMMA"/>
+            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
+        </action>
+    </actions>
 </idea-plugin>
